--- a/app/views/poker/index.html.erb
+++ b/app/views/poker/index.html.erb
@@ -13,66 +13,44 @@
 <% if @card %>
   <%= @hand = @card.split(' ') %><br>
 
-  <!-- cardnuudiig 5 salgah ehelj bn -->
-  <% @card1 = @hand.first %>
-  <% @card2 = @hand.second %>
-  <% @card3 = @hand.third %>
-  <% @card4 = @hand.fourth %>
-  <% @card5 = @hand.fifth %>
-  <!-- cardnuudiig 5 salgah duusaj bn -->
-  
-  <!-- cardnii usegiig salgah ehelj bn -->
-  <% @suit1 = @card1[0] %>
-  <% @suit2 = @card2[0] %>
-  <% @suit3 = @card3[0] %>
-  <% @suit4 = @card4[0] %>
-  <% @suit5 = @card5[0] %>
-  <!-- cardnii usegiig salgah duusaj bn -->
+  <!-- putting all suits into one array starts -->
+  <% @suits = [@hand.first[0], @hand.second[0], @hand.third[0], @hand.fourth[0], @hand.fifth[0]] %>
+  <!-- putting all suits into one array ends -->
 
-  <!-- cardnii toog salgah ehelj bn -->
-  <% if @card1[2].nil? %>
-    <% @number1 = @card1[1] %>
+  <!-- putting all numbers into one array starts -->
+  <% @numbers = [@hand.first[1, 2], @hand.second[1, 2], @hand.third[1, 2], @hand.fourth[1, 2], @hand.fifth[1, 2]] %>
+  <% @numbers.sort_by(&:to_i) %>
+  <!-- putting all numbers into one array ends -->
+
+  <% if straight_flush(@suits, @numbers) %>
+    Straight Flush
   <% else %>
-    <% @number1 = @card1[1] += @card1[2] %>
-  <% end %>
-
-  <% if @card2[2].nil? %>
-    <% @number2 = @card2[1] %>
-  <% else %>
-    <% @number2 = @card2[1] += @card2[2] %>
-  <% end %>
-
-  <% if @card3[2].nil? %>
-    <% @number3 = @card3[1] %>
-  <% else %>
-    <% @number3 = @card3[1] += @card3[2] %>
-  <% end %>
-
-  <% if @card4[2].nil? %>
-    <% @number4 = @card4[1] %>
-  <% else %>
-    <% @number4 = @card4[1] += @card4[2] %>
-  <% end %>
-
-  <% if @card5[2].nil? %>
-    <% @number5 = @card5[1] %>
-  <% else %>
-    <% @number5 = @card5[1] += @card5[2] %>
-  <% end %>
-
-  <!-- cardnii toog salgah duusaj bn -->
-
-  <% if straight_flash(@suit1, @suit2, @suit3, @suit4, @suit5, @number1, @number2, @number3, @number4, @number5, @result) == 1 %>
-    Straight Flash
-  <% elsif straight_flash(@suit1, @suit2, @suit3, @suit4, @suit5, @number1, @number2, @number3, @number4, @number5, @result) == 0 %>
-    <% if four_of_a_kind(@suit1, @suit2, @suit3, @suit4, @suit5, @result) == 1 %>
+    <% if four_of_a_kind(@numbers) %>
       Four of a kind
-    <% elsif four_of_a_kind(@suit1, @suit2, @suit3, @suit4, @suit5, @result) == 0 %>
-      <% if full_house(@number1, @number2, @number3, @number4, @number5, @result) == 1 %>
+    <% else %>
+      <% if full_house(@numbers) %>
         Full House
-      <% elsif full_house(@number1, @number2, @number3, @number4, @number5, @result) == 0 %>
-        <% if flash(@suit1, @suit2, @suit3, @suit4, @suit5, @result) == 1 %>
-          Flash
+      <% else %>
+        <% if flush(@suits) %>
+          Flush
+        <% else %>
+          <% if straight(@numbers) %>
+            Straight
+          <% else %>
+            <% if three_of_a_kind(@numbers) %>
+              Three of a kind
+            <% else %>
+              <% if two_pair(@numbers) %>
+                Two Pair
+              <% else %>
+                <% if one_pair(@numbers) %>
+                  One Pair
+                <% else %>
+                  High Card
+                <% end %>
+              <% end %>
+            <% end %>
+          <% end %>
         <% end %>
       <% end %>
     <% end %>
